
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int __m128i ;


 int _mm_clmulepi64_si128 (int ,int ,int) ;
 int _mm_or_si128 (int ,int ) ;
 int _mm_slli_epi32 (int ,int) ;
 int _mm_slli_si128 (int ,int) ;
 int _mm_srli_epi32 (int ,int) ;
 int _mm_srli_si128 (int ,int) ;
 int _mm_xor_si128 (int ,int ) ;

__attribute__((used)) static void
gfmul(__m128i a, __m128i b, __m128i *res)
{
 __m128i tmp2, tmp3, tmp4, tmp5, tmp6, tmp7, tmp8, tmp9;

 tmp3 = _mm_clmulepi64_si128(a, b, 0x00);
 tmp4 = _mm_clmulepi64_si128(a, b, 0x10);
 tmp5 = _mm_clmulepi64_si128(a, b, 0x01);
 tmp6 = _mm_clmulepi64_si128(a, b, 0x11);

 tmp4 = _mm_xor_si128(tmp4, tmp5);
 tmp5 = _mm_slli_si128(tmp4, 8);
 tmp4 = _mm_srli_si128(tmp4, 8);
 tmp3 = _mm_xor_si128(tmp3, tmp5);
 tmp6 = _mm_xor_si128(tmp6, tmp4);

 tmp7 = _mm_srli_epi32(tmp3, 31);
 tmp8 = _mm_srli_epi32(tmp6, 31);
 tmp3 = _mm_slli_epi32(tmp3, 1);
 tmp6 = _mm_slli_epi32(tmp6, 1);

 tmp9 = _mm_srli_si128(tmp7, 12);
 tmp8 = _mm_slli_si128(tmp8, 4);
 tmp7 = _mm_slli_si128(tmp7, 4);
 tmp3 = _mm_or_si128(tmp3, tmp7);
 tmp6 = _mm_or_si128(tmp6, tmp8);
 tmp6 = _mm_or_si128(tmp6, tmp9);

 tmp7 = _mm_slli_epi32(tmp3, 31);
 tmp8 = _mm_slli_epi32(tmp3, 30);
 tmp9 = _mm_slli_epi32(tmp3, 25);

 tmp7 = _mm_xor_si128(tmp7, tmp8);
 tmp7 = _mm_xor_si128(tmp7, tmp9);
 tmp8 = _mm_srli_si128(tmp7, 4);
 tmp7 = _mm_slli_si128(tmp7, 12);
 tmp3 = _mm_xor_si128(tmp3, tmp7);

 tmp2 = _mm_srli_epi32(tmp3, 1);
 tmp4 = _mm_srli_epi32(tmp3, 2);
 tmp5 = _mm_srli_epi32(tmp3, 7);
 tmp2 = _mm_xor_si128(tmp2, tmp4);
 tmp2 = _mm_xor_si128(tmp2, tmp5);
 tmp2 = _mm_xor_si128(tmp2, tmp8);
 tmp3 = _mm_xor_si128(tmp3, tmp2);
 tmp6 = _mm_xor_si128(tmp6, tmp3);

 *res = tmp6;
}
